<resources>

    <string name="app_name">SDPM</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SPDS_Dipayan</string>
    <string name="label1">Welcome to Secured Document and Password Storage</string>
    <string name="label2">Please Enter your Details to Continue  </string>
    <string name="label3">User Name :</string>
    <string name="label4">Password :</string>
    <string name="button1">Cancel</string>
    <string name="button2">Submit</string>
    <string name="button3">Register</string>
    <string name="page1label1">WELCOME</string>
    <string name="page1label2">Please Click on what you want to do</string>
    <string name="page1label3">Save and Retrieve Passwords</string>
    <string name="page1label4">Save and retrieve Documents</string>
    <string name="help1">Welcome to Secured Document storage. Here you can store any Bank password and also any scanned copy of your valuable documents like passport,student ID,Driving License etc.</string>
    <string name="help2">Please enter the user name you had registered at the begining. Also add your SSN number for authentication</string>
    <string name="detail1">Dipayan Chattopadhyay your password for PNC bank is 10308071</string>
    <string name="alp_app_name">android-lockpattern</string>
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_retry">Retry</string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_msg_connect_4dots">Connect at least 4 dots.\nTry again…</string>
    <string name="alp_msg_draw_an_unlock_pattern">Draw an unlock pattern:</string>
    <string name="alp_msg_draw_pattern_to_unlock">Draw pattern to unlock:</string>
    <string name="alp_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_msg_redraw_pattern_to_confirm">Redraw pattern to confirm:</string>
    <string name="alp_msg_release_finger_when_done">Release finger when done</string>
    <string name="alp_msg_try_again">Sorry, try again</string>
    <string name="alp_msg_your_new_unlock_pattern">Your new unlock pattern:</string>
    <string name="selectdoc">please select the type of document and upload</string>
    <string name="SPDS_Dipayan">SPDS_Dipayan</string>
    <string name="Main_menu">Main Menu</string>
    <color name="yellow1">#F9E60E</color>
   <color name="yellow2">#F9F89D</color>
   <color name="orange4">#F7BE45</color>
   <color name="orange5">#F7D896</color>
   <color name="blue2">#19FCDA</color>
   <color name="blue25">#D9F7F2</color>
   <color name="grey05">#ACA899</color>
   <color name="white1">#FFFFFF</color>
   <color name="white2">#DDDDDD</color>
    
</resources>